allow zero entries

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,4 +6,5 @@ add_test (structure test_main -t structure)
 add_test (newline-comment-1 test_main -t newline_comment_1)
 add_test (newline-comment-2 test_main -t newline_comment_2)
 add_test (missing_key test_main -t missing_key)
+add_test (empty test_main -t empty)
 
