added comparison unit test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,4 @@ add_test (newline-comment-1 test_main -t newline_comment_1)
 add_test (newline-comment-2 test_main -t newline_comment_2)
 add_test (missing_key test_main -t missing_key)
 add_test (empty test_main -t empty)
+add_test (comparison test_main -t comparison)
