--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,4 @@ add_test (newline-comment-2 test_main -t newline_comment_2)
 add_test (missing_key test_main -t missing_key)
 add_test (empty test_main -t empty)
 add_test (comparison test_main -t comparison)
+add_test (multiple test_main -t multiple)
