--- a/tests/parse/CMakeLists.txt
+++ b/tests/parse/CMakeLists.txt
@@ -12,3 +12,4 @@ add_test (comparison test_parse -t comparison)
 add_test (multiple-1 test_parse -t multiple_1)
 add_test (multiple-2 test_parse -t multiple_2)
 add_test (mixed-multiple test_parse -t mixed_multiple)
+add_test (separated test_parse -t separated)
