--- a/tests/parse_file/CMakeLists.txt
+++ b/tests/parse_file/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable (test_parse_file main.cpp ${BIBTEX_HPP})
 
 target_link_libraries (test_parse_file ${Boost_LIBRARIES})
+
+add_test (parse-file test_parse_file ${CMAKE_CURRENT_SOURCE_DIR}/test.bib)
