added install and package target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ option (Boost_USE_STATIC_LIBS "Use static Boost libraries" ON)
 
 enable_testing ()
 
+set (CPACK_GENERATOR ZIP TGZ)
+include (CPack)
+
 find_package (Boost 1.46 REQUIRED unit_test_framework)
 
 # Do not link Boost libraries automatically
@@ -16,3 +19,5 @@ include_directories (${Boost_INCLUDE_DIRS})
 include_directories (include)
 
 add_subdirectory (tests)
+
+install (FILES ${BIBTEX_HPP} DESTINATION include/bibtex)
