doc: fixed makefile

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,2 +1,2 @@
 all:
-	./rst2html-pygments.py --style style.css README.rst index.html
+	./rst2html-pygments.py --stylesheet style.css README.rst index.html
