ignore junk between entries

--- a/tests/parse/CMakeLists.txt
+++ b/tests/parse/CMakeLists.txt
@@ -13,3 +13,4 @@ add_test (multiple-1 test_parse -t multiple_1)
 add_test (multiple-2 test_parse -t multiple_2)
 add_test (mixed-multiple test_parse -t mixed_multiple)
 add_test (separated test_parse -t separated)
+add_test (junk test_parse -t junk)
