--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package (Boost 1.46 REQUIRED unit_test_framework)
+
 add_subdirectory (generate)
 add_subdirectory (parse)
 add_subdirectory (read_file)
