--- a/tests/read_file/CMakeLists.txt
+++ b/tests/read_file/CMakeLists.txt
@@ -1,6 +1,13 @@
+find_package (bibtex_spirit REQUIRED NO_MODULE)
+
+include_directories (${bibtex_spirit_INCLUDE_DIR} ${bibtex_spirit_INCLUDE_DIRS})
+
+add_definitions (${bibtex_spirit_DEFINITIONS})
+
 add_executable (test_read_file main.cpp ${BIBTEX_HPP})
 
-target_link_libraries (test_read_file ${Boost_LIBRARIES})
+target_link_libraries (test_read_file ${Boost_LIBRARIES}
+  ${bibtex_spririt_LIBRARY} ${bibtex_spririt_LIBRARIES})
 
 add_test (read-file-1 test_read_file ${CMAKE_CURRENT_SOURCE_DIR}/test1.bib 1151)
 add_test (read-file-2 test_read_file ${CMAKE_CURRENT_SOURCE_DIR}/test2.bib 2710)
