use a common runtime directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ set (BIBTEX_HPP
   ${CMAKE_CURRENT_SOURCE_DIR}/include/bibtexwriter.hpp
 )
 
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 add_subdirectory (tests)
 
 install (FILES ${BIBTEX_HPP} DESTINATION include/bibtex_spirit)
