--- a/tests/parse/CMakeLists.txt
+++ b/tests/parse/CMakeLists.txt
@@ -9,15 +9,15 @@ add_executable (test_parse main.cpp ${BIBTEX_HPP})
 target_link_libraries (test_parse ${Boost_LIBRARIES}
   ${bibtex_spririt_LIBRARY} ${bibtex_spririt_LIBRARIES})
 
-add_test (structure-1 test_parse -t structure_1)
-add_test (structure-2 test_parse -t structure_2)
-add_test (newline-comment-1 test_parse -t newline_comment_1)
-add_test (newline-comment-2 test_parse -t newline_comment_2)
-add_test (missing_key test_parse -t missing_key)
-add_test (empty test_parse -t empty)
-add_test (comparison test_parse -t comparison)
-add_test (multiple-1 test_parse -t multiple_1)
-add_test (multiple-2 test_parse -t multiple_2)
-add_test (mixed-multiple test_parse -t mixed_multiple)
-add_test (separated test_parse -t separated)
-add_test (junk test_parse -t junk)
+add_test (NAME structure-1 COMMAND test_parse -t structure_1)
+add_test (NAME structure-2 COMMAND test_parse -t structure_2)
+add_test (NAME newline-comment-1 COMMAND test_parse -t newline_comment_1)
+add_test (NAME newline-comment-2 COMMAND test_parse -t newline_comment_2)
+add_test (NAME missing_key COMMAND test_parse -t missing_key)
+add_test (NAME empty COMMAND test_parse -t empty)
+add_test (NAME comparison COMMAND test_parse -t comparison)
+add_test (NAME multiple-1 COMMAND test_parse -t multiple_1)
+add_test (NAME multiple-2 COMMAND test_parse -t multiple_2)
+add_test (NAME mixed-multiple COMMAND test_parse -t mixed_multiple)
+add_test (NAME separated COMMAND test_parse -t separated)
+add_test (NAME junk COMMAND test_parse -t junk)
