--- a/tests/parse/CMakeLists.txt
+++ b/tests/parse/CMakeLists.txt
@@ -1,13 +1,16 @@
 find_package (bibtex_spirit REQUIRED NO_MODULE)
+find_package (Boost 1.54 REQUIRED unit_test_framework)
 
 include_directories (${bibtex_spirit_INCLUDE_DIR} ${bibtex_spirit_INCLUDE_DIRS})
+include_directories (${Boost_INCLUDE_DIRS})
 
 add_definitions (${bibtex_spirit_DEFINITIONS})
 
 add_executable (test_parse main.cpp ${BIBTEX_HPP})
 
 target_link_libraries (test_parse ${Boost_LIBRARIES}
-  ${bibtex_spririt_LIBRARY} ${bibtex_spririt_LIBRARIES})
+  ${bibtex_spririt_LIBRARY} ${bibtex_spririt_LIBRARIES}
+  ${Boost_LIBRARIES})
 
 add_test (NAME structure-1 COMMAND test_parse -t structure_1)
 add_test (NAME structure-2 COMMAND test_parse -t structure_2)
